Fix java.lang.NoClassDefFoundError: sun/misc/BASE64Encoder
Class can't be compiled with openjdk 11.0.5 (Debian 10/buster)

$ java --version:
openjdk 11.0.5 2019-10-15
OpenJDK Runtime Environment (build 11.0.5+10-post-Debian-1deb10u1)
OpenJDK 64-Bit Server VM (build 11.0.5+10-post-Debian-1deb10u1, mixed mode, sharing)